fix tags blog
