# docs/swagger.json
@@ -347,18 +347,13 @@
                 "summary": "Create New treatment",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "TreatmentName",
-                        "name": "treatment_name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Price",
-                        "name": "price",
-                        "in": "formData",
-                        "required": true
+                        "description": "Treatments input details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/input.InputTreatments"
+                        }
                     }
                 ],
                 "responses": {
@@ -413,18 +408,13 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "TreatmentName",
-                        "name": "treatment_name",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Price",
-                        "name": "price",
-                        "in": "formData",
-                        "required": true
+                        "description": "Treatments input details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/input.InputTreatments"
+                        }
                     }
                 ],
                 "responses": {
@@ -670,6 +660,25 @@
         }
     },
     "definitions": {
+        "input.InputTreatments": {
+            "type": "object",
+            "required": [
+                "description",
+                "price",
+                "treatment_name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "treatment_name": {
+                    "type": "string"
+                }
+            }
+        },
         "input.UserInput": {
             "type": "object",
             "required": [
